--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 		 http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
-    <display-name>SimpleWeb Application</display-name>
+    <display-name>FireBet</display-name>
 
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
