--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
             <version>6.0.3</version>
         </dependency>
 
+        <!-- https://github.com/google/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.2</version>
+        </dependency>
+
 
     </dependencies>
 
