--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
             <version>2.8.2</version>
         </dependency>
 
+        <!-- log4j -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.5</version>
+        </dependency>
 
     </dependencies>
 
