--- a/src/main/resources/textcontent/pagecontent.properties
+++ b/src/main/resources/textcontent/pagecontent.properties
@@ -1,2 +1,4 @@
 header.icon=RU
 header.profile=\u041F\u0440\u043E\u0444\u0438\u043B\u044C
+header.myBets=\u041C\u043E\u0438 \u0441\u0442\u0430\u0432\u043A\u0438
+header.manageUsers=\u0423\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u0435 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F\u043C\u0438
